--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
   }
 }
